# disc-span-parser-release

./: .gitignore  .train_disc_biaffine.py.swp  LICENSE  README.md  config.py  pred_disc_biaffine.py  setup.py  train_disc_biaffine.py
cpp/: CMakeLists.txt  compute_max_recall.cpp  cpp_disc_span_parser.cpp  cpp_disc_span_parser.h  cxxtimer.h  filter_dataset.cpp  test_pool.cpp
cpp/disc_pstruct/: binarize.cpp  binarize.h  corpus.cpp  corpus.h  data.cpp  data.h  reconstruct.h  set.cpp  set.h  tree.cpp  tree.h  utils.h
cpp/disc_pstruct/argmax-disc/: algorithms.cpp  algorithms.h  chart-impl.h  chart.cpp  chart.h
cpp/disc_pstruct/inside-outside-disc/: algorithms.cpp  algorithms.h  chart-impl.h  chart.cpp  chart.h
cpp/utils/: chart-utils-impl.h  chart-utils.h  log-impl.h  log.h  torch-indexing.h
disc_span_parser/: __init__.py  biaffine_eval.py  biaffine_input.py  biaffine_loss.py  biaffine_network.py  loss.py  network.py
experiments/: display_results.sh  run_all.sh
experiments/dptb_bert/: cmd
experiments/dptb_fullysup/: cmd
experiments/dptb_glove/: cmd
experiments/negra_bert/: cmd
experiments/negra_fullysup/: cmd
experiments/negra_glove/: cmd
experiments/tiger_bert/: cmd
experiments/tiger_fullysup/: cmd
experiments/tiger_glove/: cmd
pydestruct/: batch.py  dict.py  eval.py  functional.py  grad.py  head_percolation.py  input.py  logger.py  network.py  optim.py  text.py  timer.py
pydestruct/algorithms/: msa.py
pydestruct/data/: conll.py  export.py  ptb.py
pydestruct/nn/: bert.py  bilstm.py  characters.py  dependency.py  dropout.py  fencepost.py  mlp.py  tagger.py  transformer.py  tree.py
